# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test-lint.yml
task_manager/: __init__.py  mixins.py  settings.py  urls.py  views.py
task_manager/labels/: admin.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json
task_manager/labels/migrations/: 0001_initial.py  0002_auto_20240124_1418.py  0003_auto_20240125_0915.py  0004_alter_label_name.py  0005_auto_20240126_1031.py
task_manager/labels/templates/: label_list.html
task_manager/management/commands/: ensure_superuser.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0003_auto_20240124_1418.py  0004_auto_20240125_0915.py  0005_alter_status_name.py  0006_auto_20240126_1031.py
task_manager/statuses/templates/: status_list.html
task_manager/tasks/: filter.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: base.html  login.html  obj_create.html
task_manager/users/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
templates/: base.html  confirm_delete.html  index.html  login.html  obj_create.html
templates/labels/: label_create.html  label_list.html
templates/statuses/: status_list.html
templates/tasks/: task_detail.html  task_list.html
templates/users/: user_create.html  user_list.html
(+29 files in other folders)
