[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ilya <rasskazov_ilya_98@mail.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = ">=3.8.1"
flake8 = "^6.1.0"
python-dotenv = "^1.0.0"
django = "^3.2.3"
gunicorn = "^21.2.0"
dj-database-url = "^2.1.0"
django-bootstrap5 = "^23.3"
django-extensions = "^3.2.3"
django-filter = "^23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
